// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Position /> renders should apply specified props to child component 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Array [
          Object {
            "bottom": 16,
            "left": 16,
            "position": "absolute",
            "right": 16,
            "top": 16,
            "zIndex": 2,
          },
        ],
      ]
    }
  />
</View>
`;

exports[`<Position /> renders should render component with default props 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Array [
          Object {
            "position": "relative",
          },
        ],
      ]
    }
  />
</View>
`;
